# seapie

./: .gitignore  PKG-INFO  README.md  google8982d32db20e9218 (1).html  help_dump.txt  license.txt  notes.txt  pyproject.toml  readme.md  requirements-dev.txt  seapie.py  setup.py
media/: demo.cast
old/: notes.txt  old_seapie.py  x.py
remote_test/: brain.py  dumbterm.py
seapie/: __init__.py  seapie.py
src/: old_seapie.py
src/seapie/: __init__.py  bang.py  commands.py  constants.py  handlers.py  helpers.py  prompt.py  repl.py  settings.py  state.py  status.py  version.py
test/: buggy.py  manual_stress.py  run_manual_test.py  run_manual_test2.py
