[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "seapie"
description = "A Python debugger that drops you into a live >>> prompt at breakpoints"
authors = [{name = "Markus Hirsimäki"}]
license = {text = "The Unlicense"}
readme = "readme.md"
dynamic = ["version"]
keywords = ["debugger", "debug", "debugging", "breakpoint", "pdb", "repl", "interactive", "trace", "stepping", "seapie"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Operating System :: OS Independent"
]

[project.urls]
homepage = "https://github.com/hirsimaki-markus/seapie"
issues = "https://github.com/hirsimaki-markus/seapie/issues"
license = "https://choosealicense.com/licenses/unlicense/"

[tool.setuptools]
packages = ["seapie"]
package-dir = { "" = "src" }
dynamic = { version = {attr = "seapie.__version__" } }
